# MathainoA1

./: .gitattributes  .gitignore  DATENSCHUTZ.md  LICENSE  README.md  handbuch.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  tests.yml
assets/fonts/: LICENSE.txt
src/mathainoa1/: __init__.py  models.py
src/mathainoa1/logic/: answer_check.py  conjugation.py  declension.py  session.py
src/mathainoa1/storage/: audio.py  content.py  notes.py  pdf_export.py  progress.py  settings.py  tts.py
src/mathainoa1/ui/: app.py  audio.py
src/mathainoa1/ui/views/: grammar.py  help.py  manager.py  notes.py  reference.py  settings.py  stats.py  trainer.py  wordlist.py
tests/: test_audio.py  test_conjugation.py  test_declension.py  test_export.py  test_logic.py  test_models.py  test_notes_storage.py  test_progress.py  test_selections.py  test_storage.py  test_tts.py  test_views.py
tools/: make_icon.py
